--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@swc/core": "^1.3.57",
+    "@swc/jest": "^0.2.26",
+    "jest": "^29.5.0"
   }
 }
