--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@swc/core": "^1.3.57",
     "@swc/jest": "^0.2.26",
-    "jest": "^29.5.0"
+    "@types/jest": "^29.5.1",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3"
   }
 }
